Bugs ironed, preparing for last checks and stretch

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -23,7 +23,7 @@
 }
 
 .tweet-box footer img {
-  opacity: 0.5;
+  opacity: 0;
 }
 
 .tweet-box .screenpic {
